<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown2"
    tools:context=".test2">

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Card 1 - Potato -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test21Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test21"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/potato"
                        android:contentDescription="@string/potato_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/potato_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2 - Tomato -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test22Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test22"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/tomato"
                        android:contentDescription="@string/tomato_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomato_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3 - Cucumber -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test23Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test23"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cucumber"
                        android:contentDescription="@string/cucumber_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cucumber_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 4 - Carrot -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test24Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test24"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/carrot"
                        android:contentDescription="@string/carrot_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carrot_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 5 - Onion -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test25Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test25"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/onion"
                        android:contentDescription="@string/onion_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onion_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />
</RelativeLayout>
