<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown2"
    tools:context=".test1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Card 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test11Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test11"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/rice"
                        android:contentDescription="@string/rice_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rice_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test12Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test12"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/wheat"
                        android:contentDescription="@string/wheat_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wheat_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test13Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test13"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/grains"
                        android:contentDescription="@string/grains_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grains_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 4 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test14Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/test14"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/corn"
                        android:contentDescription="@string/corn_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/corn_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>
