<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown2"
    tools:context=".test3">

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Card 1 - Apple -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test31Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/test31"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/apple"
                    android:contentDescription="@string/apple_image" />
            </androidx.cardview.widget.CardView>

            <!-- Card 2 - Pear -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test32Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/test32"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pear"
                    android:contentDescription="@string/pear_image" />
            </androidx.cardview.widget.CardView>

            <!-- Card 3 - Peach -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test33Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/test33"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/peach"
                    android:contentDescription="@string/peach_image" />
            </androidx.cardview.widget.CardView>

            <!-- Card 4 - Banana -->
            <androidx.cardview.widget.CardView
                android:id="@+id/test34Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/test34"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banana"
                    android:contentDescription="@string/banana_image" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />
</RelativeLayout>
